--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div>
-        <header class="container-fluid d-flex ms-4">
+        <header class="container-fluid d-flex ms-4;">
             <div class="headerleft">
                 <img src="./media/bookmyshow.PNG" alt="Book My Show">
                 <input type="text" placeholder="&#8981 Search for Movies,Events,Plays,Sports and Activities">
